# System-monitor

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c
include/: display_system_info.h  process.h  process_manager.h  system_monitor.h  system_parser.h
src/: CMakeLists.txt  display_system_info.c  process.c  process_manager.c  system_monitor.c  system_parser.c
